[tool.poetry]
name = "pyvista-demo"
version = "0.1.0"
description = "A project for visualizing a drone simulation using PyVista."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyvista = "^0.30.0"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"